[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "testing package"
authors = ["Octode <octode@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
